--- a/.github/workflows/ci-aws.yml
+++ b/.github/workflows/ci-aws.yml
@@ -23,6 +23,7 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       services: ${{ steps.build_list.outputs.service_build_list }}
+      service_retag_list: ${{ steps.build_list.outputs.service_retag_list }}
       packages: ${{ steps.build_list.outputs.package_build_list }}
     steps:
       - uses: actions/checkout@v2
@@ -67,6 +68,11 @@ jobs:
           service_build_list=$(cat $GITHUB_WORKSPACE/service_build_list.json | jq -r .)
           echo "service_build_list: $service_build_list"
           echo "::set-output name=service_build_list::$service_build_list"
+
+          service_retag_list=$(cat $GITHUB_WORKSPACE/service_retag_list.json | jq -r .)
+          echo "service_retag_list: $service_retag_list"
+          echo "::set-output name=service_retag_list::$service_retag_list"
+
           package_build_list=$(cat $GITHUB_WORKSPACE/package_build_list.json | jq -r .)
           echo "package_build_list: $package_build_list"
           echo "::set-output name=package_build_list::$package_build_list"
@@ -132,9 +138,9 @@ jobs:
           DISCORD_WEBHOOK: ${{ secrets.DISCORD_BUILD_NOTIFICATIONS_CHANNEL_WEBHOOK }}
           DISCORD_EMBEDS: '[{"color":15734528,"title":"Push Validation Failed - ${{ github.ref_name }}","url":"https://github.com/${{github.repository}}/actions/runs/${{github.run_id}}","description":"Job ${{ github.job }} in workflow ${{ github.workflow }} failed!","fields":[{"name":"Package","value":"${{ matrix.package }}"},{"name":"Commiter","value":"${{ github.event.pusher.name }}"},{"name":"Commit","value":"${{ github.event.head_commit.id }}"},{"name":"Install","value":"${{ steps.install.outcome }}","inline":true},{"name":"Build","value":"${{ steps.build.outcome }}","inline":true},{"name":"Test","value":"${{ steps.test.outcome }}","inline":true},{"name":"Format","value":"${{ steps.format.outcome }}","inline":true},{"name":"Lint","value":"${{ steps.lint.outcome }}","inline":true}]}]'
 
-  docker:
-    name: docker
-    needs: [changes,tests]
+  docker-build:
+    name: docker-build
+    needs: [changes]
     if: success() #&& (github.event_name == 'push')
     runs-on: ubuntu-latest
     strategy:
@@ -160,24 +166,11 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
 
-      - name: Set github repository
+      - name: Set ecr repository
         run: |
-          REPO_NAME_TEMP=${GITHUB_REPOSITORY}
-          REPO_NAME=${REPO_NAME##*/}
-          echo "REPO_NAME: $REPO_NAME"
-          if [ "$REPO_NAME" = "amplication" ]; then
-            if [[ $GITHUB_REF != 'refs/heads/master' ]]; then
-              ECR_REPOSITORY_PREFIX="dev-staging-os"
-            else
-              ECR_REPOSITORY_PREFIX="-staging-os"
-            fi
-          else
-            if [[ $GITHUB_REF != 'refs/heads/master' ]]; then
-              ECR_REPOSITORY_PREFIX="dev"
-            fi  
-          fi
-          echo "ECR_REPOSITORY=${{ matrix.service }}${ECR_REPOSITORY_PREFIX}" >> $GITHUB_ENV
-          echo "ECR_REPOSITORY: $ECR_REPOSITORY"
+          sh .github/workflows/scripts/get_ecr_repository.sh
+        env:
+          SERVICE_NAME: ${{ matrix.service }}
       - name: Set hash
         env:
           working-directory: packages/${{ matrix.service }}
@@ -219,7 +212,48 @@ jobs:
           Docker_image=$ECR_REGISTRY/$ECR_REPOSITORY:$GITHUB_HASH
           docker build -f ./packages/${{ matrix.service }}/Dockerfile . -t $Docker_image
           docker push $Docker_image
-          MANIFEST=$(aws ecr batch-get-image --repository-name $ECR_REPOSITORY --image-ids imageTag=$GITHUB_HASH --output json | jq --raw-output --join-output '.images[0].imageManifest')
+          MANIFEST=$(aws ecr batch-get-image --repository-name $ECR_REPOSITORY --image-ids imageTag=master --output json | jq --raw-output --join-output '.images[0].imageManifest')
           aws ecr put-image --repository-name $ECR_REPOSITORY --image-tag ${{ github.sha }} --image-manifest "$MANIFEST"
           aws ecr put-image --repository-name $ECR_REPOSITORY --image-tag ${{ github.ref_name }} --image-manifest "$MANIFEST"
-          aws ecr put-image --repository-name $ECR_REPOSITORY --image-tag ${{ github.run_id }} --image-manifest "$MANIFEST"
+          aws ecr put-image --repository-name $ECR_REPOSITORY --image-tag ${{ github.run_id }} --image-manifest "$MANIFEST"          
+  docker-retag:
+    name: docker-retag
+    needs: [changes]
+    if: success() && ${{ needs.changes.outputs.service_retag_list != '' }}
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [16.x]
+        service: ${{ fromJSON(needs.changes.outputs.service_retag_list) }} 
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }} 
+          aws-region: us-east-1
+      - name: Login to Amazon ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v1
+      - name: Set ecr repository
+        run: |
+          sh .github/workflows/scripts/get_ecr_repository.sh
+        env:
+          SERVICE_NAME: ${{ matrix.service }}
+      - name: set branch-name
+        run: |
+          if [[ $GITHUB_REF != 'refs/heads/master' ]]
+          then 
+            echo "BRANCH_NAME=$(echo $GITHUB_REF_NAME | sed "s/\//-/g")" >> $GITHUB_ENV
+          fi
+      - name: Build, tag, and push image to Amazon ECR
+        if: ${{ steps.tag-exist.outputs.tag_exist == 'false' }}
+        env:
+          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+        run: |
+          MANIFEST=$(aws ecr batch-get-image --repository-name $ECR_REPOSITORY --image-ids imageTag=master --output json | jq --raw-output --join-output '.images[0].imageManifest')
+          aws ecr put-image --repository-name $ECR_REPOSITORY --image-tag ${{ github.ref_name }} --image-manifest "$MANIFEST"
