--- a/packages/amplication-logger/package.json
+++ b/packages/amplication-logger/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@nestjs/common": "8.4.3",
     "nest-winston": "1.6.2",
+    "reflect-metadata": "0.1.13",
     "winston-cloud-logging": "1.0.2"
   },
   "jest": {
