--- a/.github/workflows/ci-aws.yml
+++ b/.github/workflows/ci-aws.yml
@@ -85,6 +85,7 @@ jobs:
   tests:
     runs-on: ubuntu-20.04
     needs: [changes]
+    if: success() && ${{ needs.changes.outputs.packages != '' }}
     timeout-minutes: 45
     strategy:
       matrix:
@@ -143,11 +144,10 @@ jobs:
         env:
           DISCORD_WEBHOOK: ${{ secrets.DISCORD_BUILD_NOTIFICATIONS_CHANNEL_WEBHOOK }}
           DISCORD_EMBEDS: '[{"color":15734528,"title":"Push Validation Failed - ${{ github.ref_name }}","url":"https://github.com/${{github.repository}}/actions/runs/${{github.run_id}}","description":"Job ${{ github.job }} in workflow ${{ github.workflow }} failed!","fields":[{"name":"Package","value":"${{ matrix.package }}"},{"name":"Commiter","value":"${{ github.event.pusher.name }}"},{"name":"Commit","value":"${{ github.event.head_commit.id }}"},{"name":"Install","value":"${{ steps.install.outcome }}","inline":true},{"name":"Build","value":"${{ steps.build.outcome }}","inline":true},{"name":"Test","value":"${{ steps.test.outcome }}","inline":true},{"name":"Format","value":"${{ steps.format.outcome }}","inline":true},{"name":"Lint","value":"${{ steps.lint.outcome }}","inline":true}]}]'
-
   docker-build:
     name: docker-build
     needs: [changes]
-    if: success() #&& (github.event_name == 'push')
+    if: success() && ${{ needs.changes.outputs.services != '' }}
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -231,7 +231,7 @@ jobs:
   docker-retag:
     name: docker-retag
     needs: [changes]
-    if: success() && ${{ needs.changes.outputs.service_retag_list != '' }}
+    if: success() && ${{ needs.changes.outputs.service_retag_list != '' }} && ${{ github.ref != 'refs/heads/master' }}
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -263,7 +263,6 @@ jobs:
             echo "BRANCH_NAME=$(echo $GITHUB_REF_NAME | sed "s/\//-/g")" >> $GITHUB_ENV
           fi
       - name: Retag images
-        if: ${{ steps.tag-exist.outputs.tag_exist == 'false' }}
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         run: |
