--- a/.github/workflows/ci-aws.yml
+++ b/.github/workflows/ci-aws.yml
@@ -213,7 +213,7 @@ jobs:
         if: ${{ steps.tag-exist.outputs.tag_exist == 'false' }}
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          TAGS: ${{ github.ref_name }},${{ github.run_id }},${{ github.sha }}
+          TAG_LIST: ${{ github.ref_name }},${{ github.run_id }},${{ github.sha }}
         run: |
           Docker_image=$ECR_REGISTRY/$ECR_REPOSITORY:$GITHUB_HASH
           docker build -f ./packages/${{ matrix.service }}/Dockerfile . -t $Docker_image
@@ -267,7 +267,7 @@ jobs:
       - name: Retag images
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          TAGS: ${{ github.ref_name }}
+          TAG_LIST: ${{ github.ref_name }}
         run: |
           MANIFEST=$(aws ecr batch-get-image --repository-name $ECR_REPOSITORY --image-ids imageTag=master --output json | jq --raw-output --join-output '.images[0].imageManifest')
           sh .github/workflows/scripts/ecr_retag.sh
