--- a/.github/workflows/ci-aws.yml
+++ b/.github/workflows/ci-aws.yml
@@ -278,6 +278,7 @@ jobs:
             docker push $Docker_image
             MANIFEST=$(aws ecr batch-get-image --repository-name $ECR_REPOSITORY --image-ids imageTag=$fixed_tag --output json | jq --raw-output --join-output '.images[0].imageManifest')
           fi
+          export MANIFEST=$MANIFEST
           sh .github/workflows/scripts/ecr_retag.sh
       - name: Discord notification
         if: failure()
