--- a/packages/amplication-server/package.json
+++ b/packages/amplication-server/package.json
@@ -37,6 +37,7 @@
     "@amplication/data-service-generator": "^0.12.4",
     "@amplication/deployer": "^0.12.4",
     "@amplication/git-service": "^0.12.4",
+    "@amplication/kafka": "^1.0.0",
     "@apollo/gateway": "0.42.3",
     "@codebrew/nestjs-storage": "0.1.6",
     "@extra-set/difference": "2.2.3",
